--- a/Scarb.toml
+++ b/Scarb.toml
@@ -6,9 +6,10 @@ edition = "2024_07"
 # See more keys and their definitions at https://docs.swmansion.com/scarb/docs/reference/manifest.html
 
 [dependencies]
+alexandria_math = "0.7.0"
 
 [dev-dependencies]
-cairo_test = "2.12.0"
+cairo_test = "2.13.1"
 
 [cairo]
 enable-gas = false
